// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/comment/demo/basic.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          alt="Han Solo"
          src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          <span>
            a few seconds ago
          </span>
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <p>
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            <i
              aria-label="icon: like"
              class="anticon anticon-like"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="like"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 0 0-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 0 0 471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0 1 42.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                />
              </svg>
            </i>
            <span
              style="padding-left:8px;cursor:auto"
            >
              0
            </span>
          </span>
        </li>
        <li>
          <span>
            <i
              aria-label="icon: dislike"
              class="anticon anticon-dislike"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="dislike"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M885.9 490.3c3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-51.6-30.7-98.1-78.3-118.4a66.1 66.1 0 0 0-26.5-5.4H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h129.3l85.8 310.8C372.9 889 418.9 924 470.9 924c29.7 0 57.4-11.8 77.9-33.4 20.5-21.5 31-49.7 29.5-79.4l-6-122.9h239.9c12.1 0 23.9-3.2 34.3-9.3 40.4-23.5 65.5-66.1 65.5-111 0-28.3-9.3-55.5-26.1-77.7zM184 456V172h81v284h-81zm627.2 160.4H496.8l9.6 198.4c.6 11.9-4.7 23.1-14.6 30.5-6.1 4.5-13.6 6.8-21.1 6.7a44.28 44.28 0 0 1-42.2-32.3L329 459.2V172h415.4a56.85 56.85 0 0 1 33.6 51.8c0 9.7-2.3 18.9-6.9 27.3l-13.9 25.4 21.9 19a56.76 56.76 0 0 1 19.6 43c0 9.7-2.3 18.9-6.9 27.3l-13.9 25.4 21.9 19a56.76 56.76 0 0 1 19.6 43c0 9.7-2.3 18.9-6.9 27.3l-14 25.5 21.9 19a56.76 56.76 0 0 1 19.6 43c0 19.1-11 37.5-28.8 48.4z"
                />
              </svg>
            </i>
            <span
              style="padding-left:8px;cursor:auto"
            >
              0
            </span>
          </span>
        </li>
        <li>
          <span>
            Reply to
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/editor.md correctly 1`] = `
<div>
  <div
    class="ant-comment"
  >
    <div
      class="ant-comment-inner"
    >
      <div
        class="ant-comment-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            alt="Han Solo"
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-comment-content"
      >
        <div
          class="ant-comment-content-author"
        />
        <div
          class="ant-comment-content-detail"
        >
          <div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control-wrapper"
              >
                <div
                  class="ant-form-item-control"
                >
                  <span
                    class="ant-form-item-children"
                  >
                    <textarea
                      class="ant-input"
                      rows="4"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control-wrapper"
              >
                <div
                  class="ant-form-item-control"
                >
                  <span
                    class="ant-form-item-children"
                  >
                    <button
                      class="ant-btn ant-btn-primary"
                      type="submit"
                    >
                      <span>
                        Add Comment
                      </span>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/list.md correctly 1`] = `
<div
  class="ant-list comment-list ant-list-split"
>
  <div
    class="ant-list-header"
  >
    2 replies
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-avatar"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-author"
            >
              <span
                class="ant-comment-content-author-name"
              >
                Han Solo
              </span>
              <span
                class="ant-comment-content-author-time"
              >
                <span>
                  a day ago
                </span>
              </span>
            </div>
            <div
              class="ant-comment-content-detail"
            >
              <p>
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  Reply to
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-avatar"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-author"
            >
              <span
                class="ant-comment-content-author-name"
              >
                Han Solo
              </span>
              <span
                class="ant-comment-content-author-time"
              >
                <span>
                  2 days ago
                </span>
              </span>
            </div>
            <div
              class="ant-comment-content-detail"
            >
              <p>
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  Reply to
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/nested.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          alt="Han Solo"
          src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <p>
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            Reply to
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-comment-nested"
  >
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              alt="Han Solo"
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-author"
          >
            <span
              class="ant-comment-content-author-name"
            >
              <a>
                Han Solo
              </a>
            </span>
          </div>
          <div
            class="ant-comment-content-detail"
          >
            <p>
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
            </p>
          </div>
          <ul
            class="ant-comment-actions"
          >
            <li>
              <span>
                Reply to
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-comment-nested"
      >
        <div
          class="ant-comment"
        >
          <div
            class="ant-comment-inner"
          >
            <div
              class="ant-comment-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  alt="Han Solo"
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-comment-content"
            >
              <div
                class="ant-comment-content-author"
              >
                <span
                  class="ant-comment-content-author-name"
                >
                  <a>
                    Han Solo
                  </a>
                </span>
              </div>
              <div
                class="ant-comment-content-detail"
              >
                <p>
                  We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
                </p>
              </div>
              <ul
                class="ant-comment-actions"
              >
                <li>
                  <span>
                    Reply to
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="ant-comment"
        >
          <div
            class="ant-comment-inner"
          >
            <div
              class="ant-comment-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  alt="Han Solo"
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-comment-content"
            >
              <div
                class="ant-comment-content-author"
              >
                <span
                  class="ant-comment-content-author-name"
                >
                  <a>
                    Han Solo
                  </a>
                </span>
              </div>
              <div
                class="ant-comment-content-detail"
              >
                <p>
                  We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
                </p>
              </div>
              <ul
                class="ant-comment-actions"
              >
                <li>
                  <span>
                    Reply to
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
